force-app/main/default/objects/pro_Time_Log_Entry__c/pro_Time_Log_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Log Entry</label>
    <nameField>
        <displayFormat>TLE-{00000000}</displayFormat>
        <label>Time Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>