force-app/main/default/objects/pro_Time_Log_Entry__c/fields/pro_Day_Worked__c.field-meta.xml
<CustomField>
    <fullName>pro_Day_Worked__c</fullName>
    <description>Captures the portion of the day worked by the consultant with 1 being a full day, 0.25 being a quarter day, etc.</description>
    <inlineHelpText>Captures the portion of the day worked by the consultant with 1 being a full day, 0.25 being a quarter day, etc.</inlineHelpText>
    <label>Day Worked</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>