force-app/main/default/objects/pro_Time_Log_Entry__c/fields/pro_Project_Consultant__c.field-meta.xml
<CustomField>
    <fullName>pro_Project_Consultant__c</fullName>
    <label>Project Consultant</label>
    <referenceTo>pro_Project_Consultant__c</referenceTo>
    <relationshipLabel>Time Log Entries</relationshipLabel>
    <relationshipName>Time_Log_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>