force-app/main/default/objects/pro_Time_Log_Entry__c/fields/pro_Project_Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Project_Consultant_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; pro_Project_Consultant__r.Id, pro_Project_Consultant__r.Name)</formula>
    <label>Project Consultant Name</label>
    <type>Text</type>
</CustomField>