force-app/main/default/objects/pro_Time_Log_Entry__c/fields/Pro_Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>Pro_Technical_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipLabel>Time Log Entries</relationshipLabel>
    <relationshipName>Time_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>