force-app/main/default/objects/pro_Time_Log_Entry__c/fields/pro_Time_Log_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Time_Log_Date__c</fullName>
    <description>Captures the Date that was worked by a consultant.</description>
    <label>Date Worked</label>
    <type>Date</type>
</CustomField>