force-app/main/default/objects/pro_Time_Log_Entry__c/fields/Pro_Time_Log_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Pro_Time_Log_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Time Log Ext Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>