force-app/main/default/objects/pro_Time_Log_Entry__c/fields/pro_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>pro_Work_Location__c</fullName>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>